# mastermind

./: .env  .gitignore  pyproject.toml
mastermind/: board.py  game.py
website/: website.py
website/static/css/: main.css
website/templates/: base.html  index.html  website.html
